--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
 pandas>=1.3.0
 xlsxwriter>=3.0.0
 openpyxl>=3.0.0
+numpy>=1.24.0
+Flask==2.3.3
+Flask-SQLAlchemy==3.0.5
+Flask-Migrate==4.0.5
+Werkzeug==2.3.7
+Jinja2==3.1.2
+python-dateutil==2.8.2
+WTForms==3.0.1
+Flask-WTF==1.1.1
+celery==5.3.1
+redis==4.6.0
+gunicorn==21.2.0
